--- a/index.html
+++ b/index.html
@@ -72,27 +72,31 @@
       <p>You have the option of monthly or yearly billing.</p>
       <div class="options">
         <div class="arcade">
+          <img src="assets/images/icon-arcade.svg" alt="icon arcade">
           <p>Arcade</p>
           <span>$9/mo</span>
         </div>
         <div class="advanced">
+          <img src="assets/images/icon-advanced.svg" alt="icon advanced">
           <p>Advanced</p>
           <span>$12/mo</span>
         </div>
         <div class="pro">
+          <img src="assets/images/icon-pro.svg" alt="icon pro">
           <p>Pro</p>
           <span>$15/mo</span>
         </div>
       </div>
       <div class="billing">
         <p>Monthly</p>
-        <div class="toggle">
+        <label class="switch">
           <input type="checkbox">
-        </div>
+          <span class="slider"></span>
+        </label>
         <p>Yearly</p>
       </div>
       <div class="back-next-confirm">
-        <button>Go Back</button>
+        <p class="go-back">Go Back</p>
         <button class="next">Next Step</button>
       </div>
     </div>
@@ -117,7 +121,7 @@
         +$2/mo
       </div>
       <div class="back-next-confirm">
-        <button>Go Back</button>
+        <p class="go-back">Go Back</p>
         <button class="next">Next Step</button>
       </div>
     </div>
