--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Sidebar start -->
     <section class="sidebar">
     <div class="your-info">
-      <div class="step-number">1</div>
+      <div class="step-number active">1</div>
       <div class="step-name">
         <p>Step 1</p>
         <h3>Your info</h3> 
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="back-next-confirm">
-        <button class="next">Next Step</button>
+        <button class="next" id="next-step-one">Next Step</button>
       </div>
     </div>
         <!-- Step 1 end -->
@@ -104,8 +104,8 @@
         </div>
       </div>
       <div class="back-next-confirm">
-        <p class="go-back">Go Back</p>
-        <button class="next">Next Step</button>
+        <p class="go-back" id="go-back-step-two">Go Back</p>
+        <button class="next" id="next-step-two">Next Step</button>
       </div>
     </div>
         <!-- Step 2 end -->
@@ -154,8 +154,8 @@
         </div>
       </div>
       <div class="back-next-confirm">
-        <p class="go-back">Go Back</p>
-        <button class="next">Next Step</button>
+        <p class="go-back" id="go-back-step-three">Go Back</p>
+        <button class="next" id="next-step-three">Next Step</button>
       </div>
     </div>
         <!-- Step 3 end -->
@@ -171,8 +171,8 @@
       Total (per month/year)
 
       <div class="back-next-confirm">
-        <p class="go-back">Go Back</p>
-        <button class="confirm">Confirm</button>
+        <p class="go-back" id="go-back-step-four">Go Back</p>
+        <button class="confirm" id="confirm">Confirm</button>
       </div>
     </div>
   </section>
@@ -189,5 +189,6 @@
       <!-- Step 5 end -->
   </section>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
