--- a/index.html
+++ b/index.html
@@ -53,15 +53,24 @@
       </div>
       <div class="input-infos">
         <div class="name">
-          <label for="name">Name</label><br/>
+          <div class="name-text">
+            <label for="name">Name</label>
+            <p id="required">This field is required</p>
+          </div>
           <input id="name" type="text" name="name" placeholder="e.g. Stephen King">
         </div>
         <div class="email">
-          <label>Email Address</label><br/>
+          <div class="email-text">
+            <label>Email Address</label>
+            <p id="required">This field is required</p>
+          </div>
           <input id="email" type="text" name="email" placeholder="e.g. stephenking@lorem.com">
         </div>
         <div class="phone-number">
-          <label>Phone Number</label><br/>
+          <div class="phone-number-text">
+            <label>Phone Number</label>
+            <p id="required">This field is required</p>
+          </div>
           <input id="phone" type="text" name="phone" placeholder="e.g. +1 234 567 890">
         </div>
       </div>
