--- a/index.html
+++ b/index.html
@@ -87,26 +87,29 @@
       </div>
       <div class="payments">
         <div class="options">
-          <div class="arcade">
+          <div class="arcade active">
             <img src="assets/images/icon-arcade.svg" alt="icon arcade">
             <p>Arcade</p>
-            <span>$9/mo</span>
+            <span>$<span class="money">9</span>/mo</span>
+            <p class="two-months-free">2 months free</p>
           </div>
           <div class="advanced">
             <img src="assets/images/icon-advanced.svg" alt="icon advanced">
             <p>Advanced</p>
-            <span>$12/mo</span>
+            <span>$<span class="money">12</span>/mo</span>
+            <p class="two-months-free">2 months free</p>
           </div>
           <div class="pro">
             <img src="assets/images/icon-pro.svg" alt="icon pro">
             <p>Pro</p>
-            <span>$15/mo</span>
+            <span>$<span class="money">15</span>/mo</span>
+            <p class="two-months-free">2 months free</p>
           </div>
         </div>
         <div class="billing">
           <p>Monthly</p>
           <label class="switch">
-            <input type="checkbox">
+            <input class="toggle" type="checkbox">
             <span class="slider"></span>
           </label>
           <p>Yearly</p>
